--- a/20230321_hellomyboyfriend/hellomyboyfriend.html
+++ b/20230321_hellomyboyfriend/hellomyboyfriend.html
@@ -7,8 +7,17 @@
     <title>Hello My Boyfriend</title>
 </head>
 <body>
+    <a href="https://google.com">구글구글</a>
     <div>
         <h1>아이브</h1>
+        <ul>
+            <li>유진</li>
+            <li>가을</li>
+            <li>레이</li>
+            <li>원영</li>
+            <li>리즈</li>
+            <li>이서</li>
+        </ul>
         <ul>
             <li>유진</li>
             <li>가을</li>
@@ -20,9 +29,16 @@
         <img src="https://isplus.com/data/isp/image/2023/01/21/isp20230121000075.jpg" alt="0">
     </div>
     <div>
-        <h1>남자친구</h1>
+        <h1>💕릴러말즈💕</h1>
         <ol>
-            <li>💕릴러말즈💕</li>
+            <li>도시생활</li>
+            <li>검정색하트</li>
+            <li>namchin</li>
+            <li>trip</li>
+            <li>selfish</li>
+        </ol>
+        <ol>
+            <li>도시생활</li>
             <li>검정색하트</li>
             <li>namchin</li>
             <li>trip</li>
@@ -35,5 +51,16 @@
         <input type="radio" name="gender" id="">
         <input type="radio" name="gender" id="">
     </div>
+    <h1>Hello, World!</h1>
+    <h2>Hello, World!</h2>
+    <h3>Hello, World!</h3>
+    <h4>Hello, World!</h4>
+    <h5>Hello, World!</h5>
+    <h6>Hello, World!</h6>
+    <h5>Hello, World!</h5>
+    <h4>Hello, World!</h4>
+    <h3>Hello, World!</h3>
+    <h2>Hello, World!</h2>
+    <h1>Hello, World!</h1>
 </body>
 </html>
