nav, css @medial

--- a/20230321_hellomyboyfriend copy/hellomyboyfriend.html
+++ b/20230321_hellomyboyfriend copy/hellomyboyfriend.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello My Boyfriend</title>
-  
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -13,12 +12,12 @@
     <div>
         <h1 style="color: white;">아이브</h1>
         <ul>
-            <li class="Korea Leader">유진</li>  
-            <li class="Korea incheon">가을</li>
-            <li class="Japan">레이</li>
-            <li class="Korea" style="color: violet;">원영</li>
-            <li class="Korea">리즈</li>
-            <li class="korea">이서</li>
+            <li class="leader">유진</li>
+            <li class="inchan">가을</li>
+            <li class="jpmem">레이</li>
+            <li style="color:violet">원영</li>
+            <li style="text-decoration: underline;" class="krmem">리즈</li>
+            <li class="krmem">이서</li>
         </ul>
         <ul>
             <li>유진</li>
