--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -6,23 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>navbar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <!-- 클래스 두개에 속한다??? 시험 나옴?????-->
-        <nav class="nav container"></nav>
+        <nav class="nav container">
             <a href="" class="nav-logo">
-                <i class="bi bi-bookmarks"></i>
+                <i class="bi bi-bookmark"></i>
+
             </a>
-        <ul class="nav-list">
-            <li class="nav-item"><a href="" class="nav-link">책장</a></li>
-            <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
-            <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
-        </ul>
-        <div class="nav-toggle" id="nav_toggle">
-            <i class="bi bi-list"></i>
-        </div>
+            <ul class="nav-list">
+                <li class="nav-item"><a href="" class="nav-link">책장</a></li>
+                <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
+                <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
+            </ul>
+            <div class="new-toggle" id="nav_toggle">
+                <i class="bi bi-list"></i>
+
+            </div>
+        </nav>
+    </header>
 
 
 
