--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -35,16 +35,16 @@
 
     </header>
     <img src="https://cdn.eyesmag.com/content/uploads/posts/2023/03/22/national-puppy-day-naver-maps-0a95d167-c69a-41f2-8981-630f9f39f99b.jpg" alt="image">
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
-    hello, World hello, World hello, World hello, World hello, World hello, World<br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
+    hello, World hello, World hello, World hello, World <br>
 </body>
 </html>
