--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -8,43 +8,46 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
     <header>
-        <!-- 클래스 두개에 속한다??? 시험 나옴?????-->
         <nav class="nav container">
             <a href="" class="nav-logo">
-                <i class="bi bi-bookmark"></i>
-
+                <i class="bi bi-bookmarks"></i>
             </a>
-            <ul class="nav-list">
+
+            <ul class="nav-list show-menu">
                 <li class="nav-item"><a href="" class="nav-link">책장</a></li>
                 <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
                 <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
             </ul>
-            <div class="new-toggle" id="nav_toggle">
-                <i class="bi bi-list"></i>
 
+            <div class="nav-toggle" id="nav_toggle">
+                <i class="bi bi-list"></i>
             </div>
+
+
+
         </nav>
     </header>
+    <img src=https://cdn.eyesmag.com/content/uploads/posts/2023/03/22/national-puppy-day-naver-maps-0a95d167-c69a-41f2-8981-630f9f39f99b.jpg alt="">
 
-
-
-
-
-    </header>
-    <img src="https://cdn.eyesmag.com/content/uploads/posts/2023/03/22/national-puppy-day-naver-maps-0a95d167-c69a-41f2-8981-630f9f39f99b.jpg" alt="image">
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
-    hello, World hello, World hello, World hello, World <br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
+    Hello, World!Hello, World!Hello, World!Hello, World!<br>
 </body>
+<script src="js/nav.js"></script>
 </html>
