--- a/20230620_bookreviewcalendar/review.html
+++ b/20230620_bookreviewcalendar/review.html
@@ -18,7 +18,7 @@
             </a>
 
             <ul class="nav-list">
-                <li class="nav-item"><a href="" class="nav-link">책장</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">책장</a></li>
                 <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
                 <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
             </ul>
@@ -42,7 +42,7 @@
                 <div class="info-group container">
                     <div class="info container">
                         <div class="title label">
-                            .title.label
+                            제목
                         </div>
                         <div class="title">
                             .title
@@ -50,7 +50,7 @@
                     </div>
                     <div class="info container">
                         <div class="author label">
-                            .author.label
+                            저자
                         </div>
                         <div class="author">
                             .author
@@ -60,7 +60,7 @@
                 <div class="info-group container">
                     <div class="info container">
                         <div class="publisher label">
-                            .publisher.label
+                            출판사
                         </div>
                         <div class="publisher">
                             .publisher
@@ -82,18 +82,18 @@
             <div class="review container">
                 <!-- 약어 시험에 나옴 띄어쓰기 하면 단축어 적용 안됨 (당연한거 아닌가...)-->
                 <div class="synopsis label">
-                    .synopsis.label
+                    줄거리
                 </div>
                 <div class="synopsis">
-                    .synopsis
+                    <input type="text" placeholder="줄거리를 쓰세요">
                 </div>
             </div>
             <div class="review container">
                 <div class="phrase label">
-                    .phrase.label
+                    마음에 드는구절
                 </div>
                 <div class="phrase">
-                    .phrase
+                    <input type="text" placeholder="마음에 드는 구절을 쓰세요">
                 </div>
             </div>
         </div>
