--- a/20230620_bookreviewcalendar/review.html
+++ b/20230620_bookreviewcalendar/review.html
@@ -67,11 +67,11 @@
                         </div>
                     </div>
                     <div class="info container">
-                        <div class="read-data label">
-                            .read-data.label
+                        <div class="read-date label">
+                            날짜
                         </div>
-                        <div class="read-data">
-                            .read-data
+                        <div class="read-date">
+                            .read-date
                         </div>
                     </div>
                 </div>
