add link in .nav-list

--- a/20230620_bookreviewcalendar/review.html
+++ b/20230620_bookreviewcalendar/review.html
@@ -20,7 +20,7 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="index.html" class="nav-link">책장</a></li>
                 <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
-                <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
+                <li class="nav-item"><a href="calender.html" class="nav-link">캘린더</a></li>
             </ul>
 
             <div class="nav-toggle" id="nav_toggle">
@@ -35,7 +35,7 @@
     <main id="review">
         <!-- .image-info-groups -->
         <div class="image-info-groups container">
-            <div class="book-image container">
+            <div class="book-image">
                 .book-image
             </div>
             <div class="info-groups container">
