시간표 완성

--- a/20230825_grid/2-4 timetable.html
+++ b/20230825_grid/2-4 timetable.html
@@ -29,7 +29,7 @@
         <div class="item">WSM</div>
 
         <div class="item">3교시</div>
-        <div class="item">PY/PHP</div>
+        <div class="item">PY<br>/<br>PHP</div>
         <div class="item">WSM</div>
         <div class="item">자료구조</div>
         <div class="item">과학</div>
@@ -43,7 +43,7 @@
         <div class="item">국어</div>
         <div class="item">수학</div>
         <div class="item">수학</div>
-        <div class="item">JS/블록체인</div>
+        <div class="item">JS<br>/<br>블록체인</div>
 
         <div class="item">6교시</div>
         <div class="item">체육</div>
