--- a/20230620_bookreviewcalendar/calendar.html
+++ b/20230620_bookreviewcalendar/calendar.html
@@ -35,11 +35,17 @@
     <main id="calendar">
         <!-- title <9월> -->
         <div class="title flex-container">
-            <div class="right">></div>
+            <div class="left">
+                <i class="bi bi-caret-left"></i>
+            </div>
+            <div class="month">9월</div>
+            <div class="right">
+                <i class="bi bi-caret-right"></i>
+            </div>
         </div>
 
         <!-- weekday 일 월 화 수 목 금 토-->
-        <div class="weeday container">
+        <div class="weekday container">
             <div class="weekday item">일</div>
             <div class="weekday item">월</div>
             <div class="weekday item">화</div>
