--- a/20230620_bookreviewcalendar/calendar.html
+++ b/20230620_bookreviewcalendar/calendar.html
@@ -58,7 +58,7 @@
 
         <!-- dates 1 2 3 4 ... 30 -->
         <div class="dates container">
-            <div class="date item">1</div>
+            <!-- <div class="date item">1</div>
             <div class="date item">2</div>
             <div class="date item">3</div>
             <div class="date item">4</div>
@@ -87,7 +87,7 @@
             <div class="date item">27</div>
             <div class="date item">28</div>
             <div class="date item">29</div>
-            <div class="date item">30</div>
+            <div class="date item">30</div> -->
         </div>
 
         <!-- review -->
